# snake3d

./: .gitignore  Application1.sln  Application1.vcxproj  Application1.vcxproj.filters  CMakeLists.txt  Debug.cpp  Debug.h  InputHandler.cpp  InputHandler.h  LICENSE.md  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Shader.cpp  Shader.h  Snake3D.sln  Something.cpp  Something.h  Texture.cpp  Texture.h  Window.h  imgui.ini  main.cpp  pca.cpp  testingarea.cpp  testingarea.h
Debug/: Application1.vcxproj.FileListAbsolute.txt  CodeAnalysisResultManifest.txt  Debug.nativecodeanalysis.sarif  InputHandler.nativecodeanalysis.sarif  Mesh.nativecodeanalysis.sarif  Mesh.nativecodeanalysis.xml  Model.nativecodeanalysis.sarif  Model.nativecodeanalysis.xml  Shader.nativecodeanalysis.sarif  Shader.nativecodeanalysis.xml  ShaderProgram.nativecodeanalysis.sarif  Snake3D.ilk  Something.nativecodeanalysis.sarif  Texture.nativecodeanalysis.sarif  Texture.nativecodeanalysis.xml  VertexArrayObject.nativecodeanalysis.sarif  Window.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  pca.nativecodeanalysis.sarif  testingarea.nativecodeanalysis.sarif  vc142.idb
Models/: dziubdzius.dae
Release/: Application1.iobj  Application1.ipdb  Application1.vcxproj.FileListAbsolute.txt
Shaders/: fragment.shader  vertex.shader
Snake3D/: Snake3D.vcxproj  Snake3D.vcxproj.filters
docs/: real-guide.md
src/: Debug.cpp  Debug.h  InputHandler.cpp  InputHandler.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Something.cpp  Something.h  VertexArrayObject.cpp  VertexArrayObject.h  Window.cpp  (+4 more)
(+39 files in other folders)
